{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "Player",
            "id": "17aac77b-210b-4671-9db1-9ccbb1e1fe9d",
            "actions": [
                {
                    "name": "RightClickAction",
                    "type": "Button",
                    "id": "d56b6bf5-16be-4da3-a384-867139a67e4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PlayerAction",
                    "type": "Button",
                    "id": "500ff2e9-fc6e-4ac7-acf6-20d099190209",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseWheelAction",
                    "type": "Value",
                    "id": "dadca6ed-05f5-4f77-9c71-bd3b4969dfce",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveCameraAction",
                    "type": "Value",
                    "id": "72beb83a-a3cd-4c2a-af1e-6cae4eb9ec57",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e43235cb-2765-41ce-8e85-61e692e5efca",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClickAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "486c1a0e-4b86-4d00-a4c0-a9d275600c59",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "da2f353e-9148-4a50-afda-869b95ad16fe",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheelAction",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "797c7cbb-665c-4687-abc6-d7e4b9e5d73c",
                    "path": "<Mouse>/scroll/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheelAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7b5c38b4-f7bc-4852-aa95-a5bc8c413064",
                    "path": "<Mouse>/scroll/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseWheelAction",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "01a93fe0-3fd7-488d-8d1b-aecd8a94e430",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCameraAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}